--- a/templates/template.html
+++ b/templates/template.html
@@ -78,7 +78,7 @@
                     <!-- MENU -->
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/app">Explore</a></li>
+                        <li><a href="/app" class="menu-explore">Explore</a></li>
                         <li><a href="#">Paper</a></li>
                         <li><a href="https://int-brain-lab.github.io/iblenv/">Code</a></li>
                         <li><a href="https://www.internationalbrainlab.com/">Lab</a></li>
