--- a/templates/app.html
+++ b/templates/app.html
@@ -141,13 +141,17 @@
 
 <!-- TRIAL PLOTS -->
 <div>
-    <!-- Placeholder for unity -->
-    <div class="six columns">
-        <canvas id="placeholder-canvas"></canvas>
-    </div>
     <!-- Trial raster plot -->
-    <div class="six columns">
-        <img id="trialPlot">
+    <div class="row"></div>
+        <div class="twelve columns">
+            <img id="trialPlot">
+        </div>
+    </div>
+    <!-- Placeholder for unity -->
+    <div class="row">
+        <div class="twelve columns">
+            <canvas id="placeholder-canvas"></canvas>
+        </div>
     </div>
 </div>
 
