--- a/static/styles.css
+++ b/static/styles.css
@@ -58,6 +58,74 @@ body {
 
 
 /*************************************************************************************************/
+/*  Body                                                                                         */
+/*************************************************************************************************/
+
+figure {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+
+caption {
+    text-align: center;
+}
+
+
+select.multiple {
+    height: 100px !important;
+}
+
+
+
+form img {
+    /* changed this from 100% but now scaling with page doesn't work */
+    width: 100%;
+    min-height: 100px;
+    border: 0;
+}
+
+
+
+body img.loading {
+    position: absolute;
+    left: 20px;
+
+    width: 30px;
+    min-width: 30px;
+    min-height: 30px;
+    visibility: hidden;
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: roboto-condensed;
+    text-transform: uppercase;
+    font-size: 24pt;
+    margin: 30px 0;
+    /* font-variant: small-caps; */
+}
+
+h2 {
+    text-align: center;
+    border-style: solid;
+    border-width: 2px 0;
+    border-color: #eee;
+    font-weight: 300;
+    padding: 20px 0;
+    margin: 60px 0 40px 0;
+    color: #999;
+    background-color: #fcfcfc;
+}
+
+
+
+/*************************************************************************************************/
 /*  Header                                                                                       */
 /*************************************************************************************************/
 
@@ -118,63 +186,6 @@ body {
 #footer {
     text-align: center;
     padding: 20px 0;
-}
-
-
-
-/*************************************************************************************************/
-/*  Body                                                                                         */
-/*************************************************************************************************/
-
-figure {
-    margin-left: 0;
-    margin-right: 0;
-}
-
-
-caption {
-    text-align: center;
-}
-
-
-select.multiple {
-    height: 100px !important;
-}
-
-
-
-img {
-    /* changed this from 100% but now scaling with page doesn't work */
-    width: 100%;
-
-    /* height: 100%; */
-    /* aspect-ratio: 3/2; */
-}
-
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: roboto-condensed;
-    text-transform: uppercase;
-    font-size: 24pt;
-    margin: 30px 0;
-    /* font-variant: small-caps; */
-}
-
-h2 {
-    text-align: center;
-    border-style: solid;
-    border-width: 2px 0;
-    border-color: #eee;
-    font-weight: 300;
-    padding: 20px 0;
-    margin: 60px 0 40px 0;
-    color: #999;
-    background-color: #fcfcfc;
 }
 
 
