--- a/templates/app.html
+++ b/templates/app.html
@@ -90,6 +90,8 @@
     <!-- Session overview plot -->
     <div class="twelve columns">
         <img id="sessionPlot">
+        <img id="sessionPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
+            class="loading">
     </div>
 </div>
 
@@ -142,11 +144,14 @@
 <!-- TRIAL PLOTS -->
 <div>
     <!-- Trial raster plot -->
-    <div class="row"></div>
+    <div class="row">
         <div class="twelve columns">
             <img id="trialPlot">
+            <img id="trialPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
+                class="loading">
         </div>
     </div>
+
     <!-- Placeholder for unity -->
     <div class="row">
         <div class="twelve columns">
@@ -199,6 +204,8 @@
     <div class="twelve columns">
         <!-- Cluster overview plot -->
         <img id="clusterPlot">
+        <img id="clusterPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
+            class="loading">
     </div>
 </div>
 
