Add stat on landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
             detailing our standardized recording methods.
         </p>
         <p>
-            The data was collected in XX different laboratories across the globe.
+            The data was collected in <strong>12 different laboratories</strong> across the globe.
         </p>
 
         </p>
