--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,6 @@
 <div class="row">
     <div class="twelve columns">
         <figure>
-            <!-- <img
-                src="https://github.com/int-brain-lab/iblviewer/raw/main/iblviewer_assets/doc/iblviewer_v2_demo_brain_wide_map_1.jpg?raw=true"> -->
-            <!-- <video url="https://youtu.be/PgXjZJ4mI1s"></video> -->
             <iframe id="video-1" src="https://www.youtube.com/embed/PgXjZJ4mI1s" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -63,8 +60,10 @@
 <!-- VIDEOS -->
 <div class="row">
     <div class="twelve columns">
-        <img
-            src="https://github.com/int-brain-lab/iblviewer/raw/main/iblviewer_assets/doc/iblviewer_v2_demo_brain_wide_map_1.jpg?raw=true">
+        <video autoplay muted loop>
+            <source src="/static/images/labs.mp4" type="video/mp4">
+            Download the <a href="/static/images/labs.mp4">MP4</a> video.
+        </video>
     </div>
 </div>
 
