Fix video width

--- a/static/styles.css
+++ b/static/styles.css
@@ -309,6 +309,10 @@ h2 {
     aspect-ratio: 1.777;
 }
 
+video {
+    width: 100%;
+}
+
 
 
 /*************************************************************************************************/
