Add trial viewer placeholder image

--- a/templates/app.html
+++ b/templates/app.html
@@ -169,7 +169,8 @@
     <!-- Placeholder for unity -->
     <div class="row">
         <div class="twelve columns">
-            <canvas id="placeholder-canvas"></canvas>
+            <!-- <canvas id="placeholder-canvas"></canvas> -->
+            <img id="trialViewer" src="/static/images/trial_viewer.png">
         </div>
     </div>
 </div>
