WIP: integrating trial viewer, not working yet

--- a/static/styles.css
+++ b/static/styles.css
@@ -321,12 +321,20 @@ video {
 
 #unity-canvas {
     width: 100%;
-    background-image: url('/static/fallback.png');
+    background-image: url('/static/images/fallback.png');
     background-size: contain;
     background-repeat: no-repeat;
     aspect-ratio: 1;
 }
 
+
+#unity-canvas-trial {
+    width: 100%;
+    background-image: url('/static/images/trial_viewer.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    /* aspect-ratio: 1; */
+}
 
 
 /*************************************************************************************************/
