--- a/templates/app.html
+++ b/templates/app.html
@@ -169,8 +169,7 @@
     <!-- Placeholder for unity -->
     <div class="row">
         <div class="twelve columns">
-            <!-- <canvas id="placeholder-canvas"></canvas> -->
-            <img id="trialViewer" src="/static/images/trial_viewer.png">
+            <canvas id="unity-canvas-trial"></canvas>
         </div>
     </div>
 </div>
