--- a/templates/app.html
+++ b/templates/app.html
@@ -160,9 +160,12 @@
     <!-- Trial raster plot -->
     <div class="row">
         <div class="twelve columns">
-            <img id="trialPlot">
-            <img id="trialPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
-                class="loading">
+            <div id="trialWrapper">
+                <img id="trialPlot">
+                <img id="trialPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
+                    class="loading">
+                <div id="trialTime"></div>
+            </div>
         </div>
     </div>
 
