Add session selector query examples

--- a/templates/app.html
+++ b/templates/app.html
@@ -46,6 +46,11 @@
         <p>Select to view one example probe insertion (gray) out of the hundreds recorded across all mice (white),
             either by clicking on the brain or by selecting its unique identifier (PID).
         </p>
+        <p><strong>Examples:</strong>
+            <code>cortexlab</code> (lab),
+            <code>CSHL052</code> (subject),
+            <code>CA1</code> (brain region)
+        </p>
     </div>
 </div>
 
