Comment out last section of the landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
 
 
 <!-- SCIENTIFIC FINDINGS -->
-<div class="row">
+<!-- <div class="row">
     <div class="twelve columns">
         <h3>What are the major scientific findings ?</h3>
 
@@ -107,7 +107,7 @@
         <h4>Behavior paper</h4>
 
     </div>
-</div>
+</div> -->
 
 
 
