--- a/templates/app.html
+++ b/templates/app.html
@@ -21,6 +21,8 @@
         pid: QUERY_PARAMS.pid || FLASK_CTX.DEFAULT_PID, // initial probe UUID
         tid: parseInt(QUERY_PARAMS.trial_id, 10) || 0, // trial ID
         cid: 0, // cluster ID
+        trial_onsets: [], // for all trials, including nan ones, so we can index by the tid
+        trial_offsets: [],
         // dur: 0, // session duration
     };
 </script>
