--- a/templates/app.html
+++ b/templates/app.html
@@ -21,9 +21,10 @@
         pid: QUERY_PARAMS.pid || FLASK_CTX.DEFAULT_PID, // initial probe UUID
         tid: parseInt(QUERY_PARAMS.trial_id, 10) || 0, // trial ID
         cid: 0, // cluster ID
+        trials: [],
         trial_onsets: [], // for all trials, including nan ones, so we can index by the tid
         trial_offsets: [],
-        // dur: 0, // session duration
+        dur: 0, // session duration
     };
 </script>
 
