--- a/templates/app.html
+++ b/templates/app.html
@@ -19,8 +19,8 @@
     // Current context.
     var CTX = {
         pid: QUERY_PARAMS.pid || FLASK_CTX.DEFAULT_PID, // initial probe UUID
-        tid: parseInt(QUERY_PARAMS.trial_id, 10) || 0, // trial ID
-        cid: 0, // cluster ID
+        tid: parseInt(QUERY_PARAMS.tid, 10) || 0, // trial ID
+        cid: parseInt(QUERY_PARAMS.cid, 10) || 0, // cluster ID
         trials: [],
         trial_onsets: [], // for all trials, including nan ones, so we can index by the tid
         trial_offsets: [],
