Add share button

--- a/templates/app.html
+++ b/templates/app.html
@@ -48,8 +48,16 @@
 </script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-theme-classic" />
 
+{% endblock %}
+
+
+
+{% block share %}
+
+<div id="share"><a>share</a></div>
 
 {% endblock %}
+
 
 
 {% block content %}
