--- a/static/styles.css
+++ b/static/styles.css
@@ -363,6 +363,43 @@ video {
 
 
 
+
+/*************************************************************************************************/
+/*  Share button                                                                                 */
+/*************************************************************************************************/
+
+#share {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 10px;
+    padding: 6px 10px;
+    font-size: 1.2em;
+    background-color: #0898D4;
+    font-weight: bold;
+    border-radius: 8px;
+    width: 80px;
+    text-align: center;
+    cursor: pointer;
+    z-index: 1000;
+    opacity: .75;
+}
+
+#share a {
+    color: white;
+    text-decoration: none;
+}
+
+#share:hover {
+    background-color: #52a9cf;
+}
+
+#share:active {
+    background-color: #7bafc5;
+}
+
+
+
 /*************************************************************************************************/
 /*  Double slider                                                                                */
 /*************************************************************************************************/
