Placeholders for figure legends

--- a/static/styles.css
+++ b/static/styles.css
@@ -309,6 +309,28 @@ h2 {
 
 
 /*************************************************************************************************/
+/*  Figure legends                                                                               */
+/*************************************************************************************************/
+
+.row img {
+    border: 1px solid #ccc;
+}
+
+.row details {
+    border: 1px solid #ccc;
+    margin: 5px 0 20px 0;
+    padding: 7px 10px;
+    background-color: #f3f3f3;
+}
+
+.row summary {
+    cursor: pointer;
+
+}
+
+
+
+/*************************************************************************************************/
 /*  Videos                                                                                       */
 /*************************************************************************************************/
 
@@ -360,7 +382,6 @@ video {
     width: 2px;
     background-color: #119cd6;
 }
-
 
 
 
