--- a/templates/app.html
+++ b/templates/app.html
@@ -141,12 +141,19 @@
         <img id="sessionPlot">
         <img id="sessionPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
             class="loading">
+    </div>
+</div>
+
+<!-- FIGURE LEGEND -->
+<div class="row">
+    <div class="twelve columns">
         <details>
             <summary>Click to read the figure legend</summary>
             TODO LEGEND 1
         </details>
     </div>
 </div>
+
 
 <!-- POST-PLOT TEXT -->
 <div class="row">
@@ -202,41 +209,50 @@
 </div>
 
 <!-- TRIAL PLOTS -->
-<div>
-    <!-- Trial raster plot -->
-    <div class="row">
-        <div class="twelve columns">
-            <div id="trialWrapper">
-                <img id="trialPlot">
-                <img id="trialPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
-                    class="loading">
-                <div id="trialTime"></div>
-            </div>
-            <details>
-                <summary>Click to read the figure legend</summary>
-                TODO LEGEND 2
-            </details>
-        </div>
-    </div>
-
-    <!-- Placeholder for unity -->
-    <div class="row">
-        <div class="twelve columns">
-            <canvas id="unity-canvas-trial"></canvas>
-        </div>
-    </div>
-
-    <!-- Trial event plot -->
-    <div class="row">
-        <div class="twelve columns">
-            <img id="trialEventPlot">
-            <img id="trialEventPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
+<div class="row">
+    <div class="twelve columns">
+        <div id="trialWrapper">
+            <img id="trialPlot">
+            <img id="trialPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
                 class="loading">
-            <details>
-                <summary>Click to read the figure legend</summary>
-                TODO LEGEND 3
-            </details>
+            <div id="trialTime"></div>
         </div>
+    </div>
+</div>
+
+<!-- FIGURE LEGEND -->
+<div class="row">
+    <div class="twelve columns">
+        <details>
+            <summary>Click to read the figure legend</summary>
+            TODO LEGEND 2
+        </details>
+    </div>
+</div>
+
+<!-- Placeholder for unity -->
+<div class="row">
+    <div class="twelve columns">
+        <canvas id="unity-canvas-trial"></canvas>
+    </div>
+</div>
+
+<!-- Trial event plot -->
+<div class="row">
+    <div class="twelve columns">
+        <img id="trialEventPlot">
+        <img id="trialEventPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
+            class="loading">
+    </div>
+</div>
+
+<!-- FIGURE LEGEND -->
+<div class="row">
+    <div class="twelve columns">
+        <details>
+            <summary>Click to read the figure legend</summary>
+            TODO LEGEND 3
+        </details>
     </div>
 </div>
 
@@ -293,6 +309,12 @@
         <img id="clusterPlot">
         <img id="clusterPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
             class="loading">
+    </div>
+</div>
+
+<!-- FIGURE LEGEND -->
+<div class="row">
+    <div class="twelve columns">
         <details>
             <summary>Click to read the figure legend</summary>
             TODO LEGEND 4
