--- a/templates/template.html
+++ b/templates/template.html
@@ -81,7 +81,7 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/app" class="menu-explore">Explore</a></li>
-                        <li><a href="#">Paper</a></li>
+                        <li><a href="https://doi.org/10.6084/m9.figshare.21400815">Paper</a></li>
                         <li><a href="https://int-brain-lab.github.io/iblenv/">Code</a></li>
                         <li><a href="https://www.internationalbrainlab.com/">Lab</a></li>
                     </ul>
