--- a/templates/app.html
+++ b/templates/app.html
@@ -138,22 +138,17 @@
 <div class="row">
     <!-- Session overview plot -->
     <div class="twelve columns">
-        <img id="sessionPlot">
-        <img id="sessionPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
-            class="loading">
+        <figure>
+            <img id="sessionPlot">
+            <img id="sessionPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
+                class="loading">
+            <details>
+                <summary>Figure 1: click to read the legend</summary>
+                <div>TODO LEGEND 1</div>
+            </details>
+        </figure>
     </div>
 </div>
-
-<!-- FIGURE LEGEND -->
-<div class="row">
-    <div class="twelve columns">
-        <details>
-            <summary>Click to read the figure legend</summary>
-            TODO LEGEND 1
-        </details>
-    </div>
-</div>
-
 
 <!-- POST-PLOT TEXT -->
 <div class="row">
@@ -211,22 +206,16 @@
 <!-- TRIAL PLOTS -->
 <div class="row">
     <div class="twelve columns">
-        <div id="trialWrapper">
+        <figure id="trialWrapper">
             <img id="trialPlot">
             <img id="trialPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
                 class="loading">
             <div id="trialTime"></div>
-        </div>
-    </div>
-</div>
-
-<!-- FIGURE LEGEND -->
-<div class="row">
-    <div class="twelve columns">
-        <details>
-            <summary>Click to read the figure legend</summary>
-            TODO LEGEND 2
-        </details>
+            <details>
+                <summary>Figure 2: click to read the legend</summary>
+                <div>TODO LEGEND 2</div>
+            </details>
+        </figure>
     </div>
 </div>
 
@@ -240,22 +229,17 @@
 <!-- Trial event plot -->
 <div class="row">
     <div class="twelve columns">
-        <img id="trialEventPlot">
-        <img id="trialEventPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
-            class="loading">
+        <figure>
+            <img id="trialEventPlot">
+            <img id="trialEventPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
+                class="loading">
+            <details>
+                <summary>Figure 3: click to read the legend</summary>
+                <div>TODO LEGEND 3</div>
+            </details>
+        </figure>
     </div>
 </div>
-
-<!-- FIGURE LEGEND -->
-<div class="row">
-    <div class="twelve columns">
-        <details>
-            <summary>Click to read the figure legend</summary>
-            TODO LEGEND 3
-        </details>
-    </div>
-</div>
-
 
 
 
@@ -305,23 +289,17 @@
 <!-- CLUSTER PLOTS -->
 <div class="row">
     <div class="twelve columns">
-        <!-- Cluster overview plot -->
-        <img id="clusterPlot">
-        <img id="clusterPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
-            class="loading">
+        <figure>
+            <img id="clusterPlot">
+            <img id="clusterPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
+                class="loading">
+            <details>
+                <summary>Figure 4: click to read the legend</summary>
+                <div>TODO LEGEND 4</div>
+            </details>
+        </figure>
     </div>
 </div>
-
-<!-- FIGURE LEGEND -->
-<div class="row">
-    <div class="twelve columns">
-        <details>
-            <summary>Click to read the figure legend</summary>
-            TODO LEGEND 4
-        </details>
-    </div>
-</div>
-
 
 
 
